--- a/Speak/app/src/main/res/layout/activity_ai.xml
+++ b/Speak/app/src/main/res/layout/activity_ai.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.android.albert.speak.MainActivity"
-    android:background="#00B7B9">
+    tools:context="com.android.albert.speak.AiActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,6 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_ai" />
 
 </android.support.design.widget.CoordinatorLayout>
