--- a/Speak/app/src/main/res/layout/content_ai.xml
+++ b/Speak/app/src/main/res/layout/content_ai.xml
@@ -23,20 +23,67 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Listen"
-        android:id="@+id/listenButton"
+        android:text="Speak"
+        android:id="@+id/speakButton"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:onClick="listenButtonOnClick"
-        android:clickable="true" />
-    <Button
+        android:clickable="true"
+        android:layout_marginTop="285dp"/>
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Next"
-        android:id="@+id/nextButton"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Suggestions:"
+        android:id="@+id/textView2"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
-        android:onClick="nextButtonOnClick"
-        android:clickable="true"
-        android:layout_marginTop="65dp"/>
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="180dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Hello"
+            android:id="@+id/textView3"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Hi"
+            android:id="@+id/textView5"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="What&apos;s up!"
+            android:id="@+id/textView4"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="How are you?"
+            android:id="@+id/textView6"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp" />
+    </LinearLayout>
+
 </RelativeLayout>
